Change file names and update metadata for fork

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=SSD1322_for_Adafruit_GFX
-version=0.1.2
-author=venice1200
-maintainer=venice1200
-sentence=SSD1322 library for grayscale OLEDs based on SSD1322 Controller
-paragraph=SSD1322 library for grayscale OLEDs based on SSD1322 Controller
+name=Fast_SSD1322_for_Adafruit_GFX
+version=0.1.3
+author=bringert
+maintainer=bringert
+sentence=Fast SSD1322 library for grayscale OLEDs based on SSD1322 Controller, tested with 128x64 display
+paragraph=SSD1322 library for grayscale OLEDs based on SSD1322 Controller, tested with 128x64 display
 category=Display
-url=https://github.com/venice1200/SSD1322_for_Adafruit_GFX
+url=https://github.com/bringert/Fast_SSD1322_for_Adafruit_GFX
 architectures=*
 depends=Adafruit GFX Library
